--- a/app/src/main/res/layout/activity_reputation.xml
+++ b/app/src/main/res/layout/activity_reputation.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -10,240 +9,237 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/size_10dp"
         card_view:cardBackgroundColor="@android:color/white"
-        card_view:cardElevation="2dp"
+        card_view:cardElevation="@dimen/size_2dp"
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
-                android:id="@+id/item_tv_display_name"
+                android:id="@+id/act_rep_tv_display_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="JOHN"
-                android:textColor="#1279c9"
-                android:textSize="20sp"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/display_name"
+                android:textSize="@dimen/textSize_20sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/item_iv_profile_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:id="@+id/act_rep_iv_profile_image"
+                    android:layout_width="@dimen/size_100dp"
+                    android:layout_height="@dimen/size_100dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="@dimen/size_10dp"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/sof_default_image" />
+                    android:src="@drawable/sof_default_image"
+                    android:contentDescription="@string/content_description"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="@dimen/size_10dp"
+                    android:layout_marginBottom="@dimen/size_10dp"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_reputation"
+                        android:id="@+id/act_rep_tv_reputation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="123"
-                        android:textColor="#232628"
-                        android:textSize="15sp" />
+                        android:layout_marginStart="@dimen/size_5dp"
+                        android:layout_marginEnd="@dimen/size_10dp"
+                        android:textColor="@color/reputation_total"
+                        android:textSize="@dimen/textSize_14sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Reputation"
-                        android:textColor="#848D95"
-                        android:textSize="15sp" />
+                        android:text="@string/reputation"
+                        android:textColor="@color/reputation_label"
+                        android:textSize="@dimen/textSize_14sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="@dimen/size_10dp"
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:id="@+id/item_ll_gold_badges"
+                        android:id="@+id/act_rep_ll_gold_badges"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginStart="@dimen/size_10dp"
                         android:background="@drawable/bg_badges_gold"
                         android:orientation="horizontal"
-                        android:padding="5dp">
+                        android:padding="@dimen/size_5dp">
 
                         <ImageView
-                            android:id="@+id/item_iv_gold_badges"
-                            android:layout_width="8dp"
-                            android:layout_height="8dp"
+                            android:layout_width="@dimen/size_8dp"
+                            android:layout_height="@dimen/size_8dp"
                             android:layout_gravity="center_vertical"
+                            android:contentDescription="@string/content_description"
                             android:scaleType="fitCenter"
                             android:src="@drawable/gold_badges" />
 
                         <TextView
-                            android:id="@+id/item_tv_gold_badges"
+                            android:id="@+id/act_rep_tv_gold_badges"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="2dp"
-                            android:layout_marginEnd="5dp"
-                            android:text="1105k"
-                            android:textColor="#535a60"
-                            android:textSize="15sp" />
+                            android:layout_marginStart="@dimen/size_2dp"
+                            android:layout_marginEnd="@dimen/size_5dp"
+                            android:textColor="@color/badges"
+                            android:textSize="@dimen/textSize_14sp" />
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/item_ll_silver_badges"
+                        android:id="@+id/act_rep_ll_silver_badges"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="@dimen/size_5dp"
+                        android:layout_marginEnd="@dimen/size_5dp"
                         android:background="@drawable/bg_badges_silver"
                         android:orientation="horizontal"
-                        android:padding="5dp">
+                        android:padding="@dimen/size_5dp">
 
                         <ImageView
-                            android:id="@+id/item_iv_silver_badges"
-                            android:layout_width="8dp"
-                            android:layout_height="8dp"
+                            android:layout_width="@dimen/size_8dp"
+                            android:layout_height="@dimen/size_8dp"
                             android:layout_gravity="center_vertical"
+                            android:contentDescription="@string/content_description"
                             android:scaleType="fitCenter"
                             android:src="@drawable/silver_badges" />
 
                         <TextView
-                            android:id="@+id/item_tv_silver_badges"
+                            android:id="@+id/act_rep_tv_silver_badges"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="2dp"
-                            android:layout_marginEnd="5dp"
-                            android:text="1105k"
-                            android:textColor="#535a60"
-                            android:textSize="15sp" />
+                            android:layout_marginStart="@dimen/size_2dp"
+                            android:layout_marginEnd="@dimen/size_5dp"
+                            android:textColor="@color/badges"
+                            android:textSize="@dimen/textSize_14sp" />
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/item_ll_bronze_badges"
+                        android:id="@+id/act_rep_ll_bronze_badges"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginEnd="@dimen/size_10dp"
                         android:background="@drawable/bg_badges_bronze"
                         android:orientation="horizontal"
-                        android:padding="5dp">
+                        android:padding="@dimen/size_5dp">
 
                         <ImageView
-                            android:id="@+id/item_iv_bronze_badges"
-                            android:layout_width="8dp"
-                            android:layout_height="8dp"
+                            android:layout_width="@dimen/size_8dp"
+                            android:layout_height="@dimen/size_8dp"
                             android:layout_gravity="center_vertical"
+                            android:contentDescription="@string/content_description"
                             android:scaleType="fitCenter"
                             android:src="@drawable/bronze_badges" />
 
                         <TextView
-                            android:id="@+id/item_tv_bronze_badges"
+                            android:id="@+id/act_rep_tv_bronze_badges"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="2dp"
-                            android:text="1105k"
-                            android:textColor="#535a60"
-                            android:textSize="15sp" />
+                            android:layout_marginStart="@dimen/size_2dp"
+                            android:textColor="@color/badges"
+                            android:textSize="@dimen/textSize_14sp" />
                     </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/item_ll_location"
+                android:id="@+id/act_rep_ll_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/size_5dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="5dp"
+                    android:layout_width="@dimen/size_20dp"
+                    android:layout_height="@dimen/size_20dp"
+                    android:layout_marginEnd="@dimen/size_5dp"
+                    android:contentDescription="@string/content_description"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_location" />
 
                 <TextView
-                    android:id="@+id/item_tv_location"
+                    android:id="@+id/act_rep_tv_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="USA"
-                    android:textColor="#6a737c"
-                    android:textSize="15sp" />
+                    android:textColor="@color/location"
+                    android:textSize="@dimen/textSize_14sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/size_5dp"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="5dp"
+                    android:layout_width="@dimen/size_20dp"
+                    android:layout_height="@dimen/size_20dp"
+                    android:layout_marginEnd="@dimen/size_5dp"
+                    android:contentDescription="@string/content_description"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_last_access" />
 
                 <TextView
-                    android:id="@+id/item_tv_last_access_date"
+                    android:id="@+id/act_rep_tv_last_access_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="Last access date"
-                    android:textColor="#6a737c"
-                    android:textSize="15sp" />
+                    android:textColor="@color/location"
+                    android:textSize="@dimen/textSize_14sp" />
             </LinearLayout>
-
         </LinearLayout>
-
-
-
-
     </android.support.v7.widget.CardView>
-
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/size_10dp"
         android:text="@string/reputation_history"
-        android:textColor="#848D95"
-        android:textSize="15sp" />
+        android:textColor="@color/reputation_label"
+        android:textSize="@dimen/textSize_14sp" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#6a737c" />
+        android:layout_height="@dimen/size_1dp"
+        android:background="@color/location" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_reputation_history"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/act_rep_srl_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:clipToPadding="true"
-        android:dividerHeight="1dp"
-        android:overScrollMode="never" />
+        android:layout_weight="1">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/act_rep_rv_reputation_history"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="true"
+            android:dividerHeight="@dimen/size_1dp"
+            android:overScrollMode="never" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <ProgressBar
-        android:id="@+id/progress_loadmore"
+        android:id="@+id/act_rep_pb_loadmore"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/size_50dp"
         android:background="@android:color/transparent"
         android:visibility="gone" />
 
