--- a/app/src/main/res/layout/item_reputation.xml
+++ b/app/src/main/res/layout/item_reputation.xml
@@ -7,39 +7,35 @@
 
     <TextView
         android:id="@+id/item_reputation_tv_change"
-        android:layout_width="40dp"
+        android:layout_width="@dimen/size_40dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:text="+15"
+        android:layout_marginStart="@dimen/size_5dp"
+        android:layout_marginEnd="@dimen/size_5dp"
         android:textColor="@android:color/darker_gray"
-        android:textSize="15sp" />
+        android:textSize="@dimen/textSize_14sp" />
 
     <TextView
         android:id="@+id/item_reputation_tv_create_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:text="2 hours ago"
-        android:textColor="#bbc0c4"
-        android:textSize="15sp" />
+        android:layout_marginEnd="@dimen/size_5dp"
+        android:textColor="@color/date_created"
+        android:textSize="@dimen/textSize_14sp" />
 
     <TextView
         android:id="@+id/item_reputation_tv_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:text="upvote"
-        android:textColor="#6a737c"
-        android:textSize="15sp" />
+        android:layout_marginEnd="@dimen/size_5dp"
+        android:textColor="@color/location"
+        android:textSize="@dimen/textSize_14sp" />
 
     <TextView
         android:id="@+id/item_reputation_tv_post_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="123123"
-        android:textColor="#1279c9"
-        android:textSize="15sp"
+        android:textColor="@color/display_name"
+        android:textSize="@dimen/textSize_14sp"
         android:singleLine="true"
         android:ellipsize="marquee"/>
 
